fix: handle paged layout inventories with zero items or pages
Previously, paged layouts could fail when there were no items or when the layout had zero pages.